gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-negative_bounds_dg.rs
fn test<T: !Copy>() {}
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {}

